--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,10 +25,10 @@ nav {
   box-shadow: 0px 0px 35px #898989;
 }
 
-#content { 
+/*#content { 
   position: relative;
   background: #fff;
-}
+}*/
 
 nav img {
   position: fixed;
@@ -38,14 +38,14 @@ nav img {
   margin: 0px 5px 0px 5px;
 }
 
-div#slider { 
+#slider { 
 display: block;
 position: relative;
 overflow: hidden;
 }
 
 
-div#slider figure img { 
+#slider figure img { 
     width: 20%; 
       max-width: 100%;
   max-height: 100%;
@@ -55,7 +55,7 @@ div#slider figure img {
   right: 0;
   top: 0;
 }
-div#slider figure { 
+#slider figure { 
     position: relative;
     width: 500%;
     margin: 0;
