--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,3 +88,20 @@ overflow: hidden;
 95% { left: -300%; }
 100% { left: -400%; }
 }
+
+@media screen and (min-width : 320px) and (max-width : 480px) {
+
+  nav h1 {
+    font-size: 1.6em;
+    margin-left: 106px;
+    margin-top: 26px;
+    line-height: 26px;
+  }
+
+  #logo_and_name {
+    width: 250px;
+    left: -1.5%;
+  }
+
+
+}
