--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,4 @@
-section {
-  margin: 0 auto;
-  position: relative;
-}
-
-nav {
+nav{
   height: 100px;
   background-color: white;
   position: fixed;
@@ -20,6 +15,22 @@ nav {
   height: 100px;
   width: 520px;
   margin: 0px 0px 0px 15px;
+}
+
+#start_text {
+  z-index: 10;
+  font-family: 'Raleway', sans-serif;
+  position: absolute;
+  top: 365px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2em;
+  color: rgb(119, 119, 119);
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 25px;
+  border: 1px solid white;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 nav img {
