--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ nav{
 }
 
 #start_text {
+  display: none;
   z-index: 10;
   font-family: 'Raleway', sans-serif;
   position: absolute;
@@ -185,6 +186,13 @@ overflow: hidden;
     opacity: 0.7;
   }
 
+  #start_text {
+    top: 208px;
+    font-size: 1.4em;
+    width: 295px;
+    padding: 13px;
+  }
+
 }
 
 @media screen and (min-width : 320px) and (max-width : 399px) {
@@ -222,5 +230,11 @@ overflow: hidden;
     opacity: 0.7;
   }
 
+  #start_text {
+    top: 184px;
+    font-size: 1em;
+    width: 175px;
+    padding: 13px;
+  }
 
 }
