--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,22 +38,51 @@ nav{
   text-align: center;
 }
 
-#overview {
+#full_content {
   z-index: 10;
   position: absolute;
-  top: 890px;
+  padding-top: 50%;
+}
+
+#full_content img {
+  position: absolute;
+}
+
+#overview {
+  padding: 70px 90px;
+  color: rgb(123, 123, 123);
   background-color: white;
 }
 
-#overview article {
-  padding: 70px 90px;
-  color: rgb(123, 123, 123);
-}
-
-#overview article h1 {
+h1 {
   font-size: 1.4em;
   font-weight: 400;
   color: rgb(248, 152, 41);
+  margin-bottom: 10px;
+}
+
+#overview p {
+  line-height: 27px;
+}
+
+#features {
+  background-color: rgba(248, 152, 41, 0.9);
+  margin-left: 743px;
+  height: 495px;
+  width: 61.3%;
+}
+
+#features article {
+  padding: 160px 360px;
+  line-height: 25px;
+}
+
+#features article h1 {
+  color: rgb(250, 250, 250)
+}
+
+#features article p {
+  color: rgb(61, 61, 61);
 }
 
 nav img {
