fixed features so that is responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,11 +68,10 @@ h1 {
   background-color: rgba(248, 152, 41, 0.9);
   margin-left: 743px;
   height: 495px;
-  width: 61.3%;
 }
 
 #features article {
-  padding: 160px 360px;
+  padding: 14% 27%;
   line-height: 25px;
 }
 
