--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,10 @@ nav{
   text-align: justify;
 }
 
+#area_and_transport {
+  padding: 70px 90px 145px 90px;
+}
+
 h1 {
   font-size: 1.4em;
   font-weight: 400;
@@ -128,7 +132,9 @@ nav h1 {
 }
 
 #local_area {
-  width: 50%;
+  float: left;
+  width: 45%;
+  padding-right: 5%;
 }
 
 #slider { 
