--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,6 +147,23 @@ nav h1 {
   display: none;
 }
 
+#transport {
+  color: white;
+  background-color: rgb(123, 123, 123);
+}
+
+#tube_map {
+  width: 100%;
+  height: 360px;
+  background-color: white;
+}
+
+#tube_map img {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+}
+
 #slider { 
 display: block;
 position: relative;
@@ -263,6 +280,13 @@ overflow: hidden;
     vertical-align: top;
   }
 
+  #tube_map {
+    height: 314px;
+  }
+
+  #tube_map img {
+    width: 700px;
+  }
 }
 
 @media screen and (min-width : 400px) and (max-width : 895px) {
@@ -379,6 +403,14 @@ overflow: hidden;
     display: inline-block;
     margin: 5% 0%;
     vertical-align: top;
+  }
+
+  #tube_map {
+    height: 215px;
+  }
+
+  #tube_map img {
+    width: 409px;
   }
 
 }
