--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,14 +154,20 @@ nav h1 {
 
 #tube_map {
   width: 100%;
-  height: 360px;
+  height: 100%;
   background-color: white;
+  text-align: center;
 }
 
 #tube_map img {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
+  padding: 0px 50px;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+}
+
+#tube_map img#distance_tube {
+  padding: 35px 0px;
 }
 
 #slider { 
@@ -215,7 +221,7 @@ overflow: hidden;
 100% { left: -400%; }
 }
 
-@media screen and (min-width : 894px) and (max-width : 1295px) {
+@media screen and (min-width : 895px) and (max-width : 1295px) {
 
   #inline_nav {
     margin-right: 16px;
@@ -280,16 +286,12 @@ overflow: hidden;
     vertical-align: top;
   }
 
-  #tube_map {
-    height: 314px;
-  }
-
   #tube_map img {
     width: 700px;
   }
 }
 
-@media screen and (min-width : 400px) and (max-width : 895px) {
+@media screen and (min-width : 400px) and (max-width : 894px) {
 
 
   #index_nav {
@@ -335,7 +337,7 @@ overflow: hidden;
     padding-top: 350px;
   }
 
-  #full_content img {
+  #full_content #site_map img {
     width: 400px;
     padding: 32px 0px 0px 0px;
     left: 50%;
@@ -405,12 +407,9 @@ overflow: hidden;
     vertical-align: top;
   }
 
-  #tube_map {
-    height: 215px;
-  }
-
   #tube_map img {
     width: 409px;
+    padding: 32px 0px 0px 0px;
   }
 
 }
