--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,6 +172,8 @@ nav h1 {
 
 #contact_form {
   display: inline-block;
+  float: left;
+  padding: 75px;
 }
 
 #contact_form h1 {
@@ -219,6 +221,17 @@ input[type='submit']:hover {
 
 #form_and_about {
   background-color: rgba(248, 152, 41, 0.9);
+  color: white;
+  display: inline-block;
+}
+
+#about_us {
+  display: table;
+  padding: 75px;
+  text-align: justify;
+}
+
+#about_us h1 {
   color: white;
 }
 
