--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,22 +3,20 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-nav{
+nav {
   height: 100px;
   background-color: white;
   position: fixed;
   z-index: 300;
   width: 100%;
-  top: 0;
-  border-bottom: 1px solid rgb(181, 177, 177);
-  box-shadow: 0px 0px 35px #898989;
+  border-bottom: 1px solid #F2F2F2;
+  box-shadow: 0px 0px 35px #888888;
 }
 
 #logo_and_name {
   position: relative;
   left: 6.5%;
   height: 100px;
-  width: 520px;
   margin: 0px 0px 0px 15px;
 }
 
