--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+/*====================
+        HEADER
+====================*/
+
 header {
   height: 100px;
   background-color: white;
@@ -17,13 +21,43 @@ header h1 {
   font-size: 2.8em;
   margin-left: 120px;
   line-height: 95px;
-   display: inline-block; 
+  display: inline-block; 
   color: rgb(0, 0, 0);
 }
 
-nav {
-  position: relative;
+header img {
+  position: fixed;
+  top: 7.5px;
 }
+
+/*========NAV========*/
+
+nav { position: relative; }
+
+#inline_nav {
+  float: right;
+  margin-top: -60px;
+  margin-right: 6.8%;
+}
+
+#inline_nav li { display: inline; }
+
+#inline_nav li a {
+  font-weight: 400;
+  color: rgb(248, 152, 41);
+  text-align: center;
+  padding: 17px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+#inline_nav li a:hover { color: rgb(0, 0, 0); }
+
+#index_nav { display: none; }
+
+/*====================
+  SECTION#start_text
+====================*/
 
 #logo_and_name {
   position: relative;
@@ -112,40 +146,6 @@ td {
 
 #features article p {
   color: rgb(61, 61, 61);
-}
-
-header img {
-  position: fixed;
-  top: 7.5px;
-}
-
-#inline_nav {
-  list-style-type: none;
-  padding: 0;
-  float: right;
-  margin-top: -60px;
-  margin-right: 6.8%;
-}
-
-#inline_nav li {
-  display: inline;
-}
-
-#inline_nav li a {
-  font-weight: 400;
-  color: rgb(248, 152, 41);
-  text-align: center;
-  padding: 17px;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-#inline_nav li a:hover {
-  color: rgb(123, 123, 123);
-}
-
-#index_nav {
-  display: none;
 }
 
 #transport {
