--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  height: 2000px;
+  overflow-x: hidden;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -56,15 +56,8 @@ nav { position: relative; }
 #index_nav { display: none; }
 
 /*====================
-  SECTION#start_text
+SECTION#SLIDER_CONTENT
 ====================*/
-
-#logo_and_name {
-  position: relative;
-  left: 6.5%;
-  height: 100px;
-  margin: 0px 0px 0px 15px;
-}
 
 #start_text {
   display: none;
@@ -75,10 +68,17 @@ nav { position: relative; }
   transform: translate(-50%, -50%);
   font-size: 3em;
   color: rgb(255, 255, 255);
-  padding: 25px;
+  text-shadow: 1px 2px 3px rgb(76, 76, 76);
   text-transform: uppercase;
   text-align: center;
   width: 75%;
+}
+
+#logo_and_name {
+  position: relative;
+  left: 6.5%;
+  height: 100px;
+  margin: 0px 0px 0px 15px;
 }
 
 #full_content {
