--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,13 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+h1 {
+  font-size: 1.4em;
+  font-weight: 400;
+  color: rgb(248, 152, 41);
+  margin-bottom: 10px;
+}
+
 /*====================
         HEADER
 ====================*/
@@ -15,6 +22,13 @@ header {
   width: 100%;
   border-bottom: 1px solid #F2F2F2;
   box-shadow: 0px 0px 35px #888888;
+}
+
+#logo_and_name {
+  position: relative;
+  left: 6.5%;
+  height: 100px;
+  margin: 0px 0px 0px 15px;
 }
 
 header h1 {
@@ -153,33 +167,7 @@ SECTION#SLIDER_CONTENT
   color: rgb(250, 250, 250);
 }
 
-#features article h1 {
-  color: rgb(250, 250, 250)
-}
-
-#features article p {
-  color: rgb(61, 61, 61);
-}
-
-
-
-#logo_and_name {
-  position: relative;
-  left: 6.5%;
-  height: 100px;
-  margin: 0px 0px 0px 15px;
-}
-
-#area_and_transport {
-  padding: 70px 90px 145px 90px;
-}
-
-h1 {
-  font-size: 1.4em;
-  font-weight: 400;
-  color: rgb(248, 152, 41);
-  margin-bottom: 10px;
-}
+#features article h1 { color: rgb(250, 250, 250); }
 
 table {
   font-size: 79%;
@@ -193,9 +181,7 @@ th {
   font-size: 1.1em;
 }
 
-td {
-  padding: 4px 35px 4px 0px;
-}
+td { padding: 4px 35px 4px 0px; }
 
 #transport {
   color: white;
@@ -203,11 +189,11 @@ td {
 }
 
 #tube_map {
-  width: 100%;
-  height: 100%;
   background-color: white;
   text-align: center;
 }
+
+
 
 #tube_map img {
   padding: 0px 50px;
