--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
   overflow-x: hidden;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Lato', Helvetica, Arial, sans-serif;
+  font-weight: 300;
 }
 
 h1 {
