--- a/public/css/style.css
+++ b/public/css/style.css
@@ -185,7 +185,6 @@ th {
 td { padding: 4px 35px 4px 0px; }
 
 #transport {
-  color: black;
   background-color: rgb(229, 229, 229);
 }
 
@@ -213,6 +212,7 @@ td { padding: 4px 35px 4px 0px; }
 label { margin-right: 44px; }
 
 input[type="text"], input[type="email"], textarea {
+  outline: none;
   width: 65%;
   height: 25px;
   border: 1px solid white;
@@ -229,6 +229,7 @@ textarea {
 input[type='checkbox'] { margin: 5px 4px 10px 4px; }
 
 input[type='submit'] {
+  outline: none;
   font-size: 1em;
   background: #FFFFFF;
   color: #F89829;
@@ -241,6 +242,11 @@ input[type='submit']:hover {
   background: rgba(255, 255, 255, 0.27);
   color: #FFFFFF;
   cursor: pointer;
+}
+
+input, select, textarea{
+  color: #FFFFFF;
+  font-size: 0.9em;
 }
 
 #about_us {
@@ -351,18 +357,16 @@ SECTION#SLIDER_CONTENT
 
 }
 
+
 @media screen and (min-width : 400px) and (max-width : 894px) {
 
+  h1 { font-size: 1.1em; }
 
-  #index_nav {
-    display: inline-block;
-    float: right;
-    margin: -90px 0px 0px 0px;
-  }
+/*====================
+        HEADER
+====================*/
 
-  #inline_nav {
-    display: none;
-  }
+  #logo_and_name { left: 0px; }
 
   header h1 {
     font-size: 1.6em;
@@ -370,10 +374,12 @@ SECTION#SLIDER_CONTENT
     margin-top: 35px;
     line-height: 26px;
   }
+  #inline_nav { display: none; }
 
-  #logo_and_name {
-    width: 330px;
-    left: 0px;
+  #index_nav {
+    display: inline-block;
+    float: right;
+    margin: -90px 0px 0px 0px;
   }
 
   #index_icon {
@@ -382,78 +388,18 @@ SECTION#SLIDER_CONTENT
     width: 60px;
   }
 
-  #index_icon:hover {
-    opacity: 0.7;
-  }
-
-  #start_text {
-    top: 208px;
-    font-size: 1.4em;
-    width: 75%;
-    padding: 13px;
-  }
-
-  #full_content {
-    padding-top: 350px;
-  }
-
-  #full_content #site_map img {
-    width: 400px;
-    padding: 32px 0px 0px 0px;
-    left: 50%;
-    transform: translate(-50%, 0%);
-  }
-
-   #full_content #site_plan img {
-    left: 50%;
-    transform: translate(-50%);
-    height: 333px;
-  }
-
-  h1 {
-    font-size: 1.1em;
-  }
-
-  .text_article {
-    padding: 40px 52px;
-  }
-
-  .text_article  p {
-    font-size: 0.8em;
-  }
-
-  #features {
-    background-color: rgba(248, 152, 41, 0.9);
-    margin-left: 0;
-    height: 316px;
-  }
-
-  #features article {
-    padding: 9% 27%;
-    line-height: 21px;
-  }
-
-  #features ul {
-    font-size: 0.8em;
-  }
-
-  #site_plan {
-    height: 333px;
-    background-color: rgb(229, 229, 229);
-  }
+  #index_icon:hover { opacity: 0.7; }
 
   #index_nav li ul {
     margin-top: 27px;
     visibility: hidden;
   }
 
-  #index_nav li:hover ul {
-    visibility: visible;
-  }
+  #index_nav li:hover ul { visibility: visible; }
 
   #index_nav li ul li {
     text-align: center;
-    padding: 9px 7px;
+    padding: 9px;
     background-color: rgba(250, 250, 250, 0.9);
   }
 
@@ -466,119 +412,34 @@ SECTION#SLIDER_CONTENT
     text-decoration: none;
   }
 
-  table {
-    font-size: 68%;
-    display: inline-block;
-    margin: 5% 0%;
-    vertical-align: top;
-  }
-
-  #tube_map img {
-    width: 409px;
-    padding: 32px 0px 0px 0px;
-  }
-
-  #about_us img {
-    width: 68%;
-  }
-
-  #about_us {
-    padding: 20px 75px 75px 45px;
-    min-width: 206px;
-  }
-
-  #contact_form {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%);
-  }
-
-  #about_us p {
-    font-size: 0.8em;
-  }
-
-  #about_us h1 {
-    margin-bottom: 10px;
-  }
-
-  footer {
-    font-size: 0.75em;
-  }
-
-}
-
-@media screen and (min-width : 320px) and (max-width : 399px) {
-
-  #inline_nav {
-    display: none;
-  }
-
-  header img {
-    width: 70px;
-    top: 14.5px;
-  }
-
-  header h1 {
-    font-size: 1.6em;
-    margin-left: 87px;
-    margin-top: 26px;
-    line-height: 26px;
-  }
-
-  #logo_and_name {
-    width: 250px;
-    left: -1.5%;
-  }
-
-  #index_nav {
-    display: inline-block;
-    float: right;
-    margin: -90px 0px 0px 0px;
-  }
- 
-  #index_icon {
-    right: -38px;
-    position: relative;
-    width: 49px;
-  }
-
-  #index_icon:hover {
-    opacity: 0.7;
-  }
+/*====================
+SECTION#SLIDER_CONTENT
+====================*/
 
   #start_text {
-    top: 184px;
-    font-size: 1em;
-    width: 175px;
-    padding: 13px;
+    top: 208px;
+    font-size: 1.4em;
   }
 
-  #full_content {
-    padding-top: 264px;
-  }
+/*=====================
+  SECTION#FULL_CONTENT
+=====================*/
 
-  .text_article {
-    padding: 22px 28px;
-  }
+  #full_content { padding-top: 66%; }
 
-  .text_article  p {
-    font-size: 0.8em;
-    line-height: 20px;
-    }
-
-  h1 {
-    font-size: 1em;
-  }
+  .text_article { padding: 40px 52px; }
+  
+  .text_article  p, #about_us p { font-size: 0.8em; }
 
   #site_plan {
-    height: 200px;
+    height: 333px;
     background-color: rgb(229, 229, 229);
   }
 
-  #full_content img {
-    width: 300px;
+   #full_content #site_plan img {
     left: 50%;
-    transform: translate(-50%, 0%);
+    transform: translate(-50%);
+    height: 333px;
   }
 
   #features {
@@ -587,41 +448,40 @@ SECTION#SLIDER_CONTENT
   }
 
   #features article {
-    padding: 33px 35px;
+    padding: 9% 27%;
     line-height: 21px;
   }
 
-  #features ul {
-    font-size: 0.8em;
-  }
-
-  #index_nav li ul {
-    margin-top: 27px;
-    visibility: hidden;
-  }
-
-  #index_nav li:active ul {
-    visibility: visible;
-  }
-
-  #index_nav li ul li {
-    text-align: center;
-    padding: 9px 7px;
-    background-color: rgba(250, 250, 250, 0.9);
-  }
-
-  #index_nav li ul li:active {
-    background-color: rgb(250, 250, 250);
-  }
-
-  #index_nav li ul li a {
-    color: rgb(248, 152, 41);
-    text-decoration: none;
-  }
+  #features ul { font-size: 0.8em; }
 
   table {
-    font-size: 60.4%;;
-    margin: 8% 0% 0% 0%;
+    font-size: 68%;
+    margin: 5% 0%;
   }
+
+  #tube_map img {
+    width: 409px;
+    padding: 32px 0px 0px 0px;
+  }
+
+  #contact_form {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+  }
+
+  #about_us {
+    padding: 20px 52px 75px 52px;
+    min-width: 241px;
+  }
+
+  #about_us img { 
+    width: 68%;
+    left: 12%;
+  }
+
+  #about_us h1 { margin-bottom: 10px; }
+
+  footer { font-size: 0.75em; }
 
 }
