--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,6 +247,7 @@ input[type='submit']:hover {
 input, select, textarea{
   color: #FFFFFF;
   font-size: 0.9em;
+  padding-left: 6px;
 }
 
 #about_us {
